Navigation bar prototype

--- a/ShumiProject/ShumiApp/templates/ShumiApp/main.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/main.html
@@ -1,6 +1,7 @@
 {% extends 'ShumiApp/base.html' %}
 
 {%block content%}
+    {% include 'ShumiApp/navigation.html' %}
     <div class="card_wrapper">    
         {% for card in cards %}
         <div class="card_face">
