--- a/ShumiProject/ShumiApp/templates/ShumiApp/card_form.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/card_form.html
@@ -1,7 +1,8 @@
-<form action="" method="POST" class="card_form">
+<form action="" method="POST" enctype="multipart/form-data" class="card_form">
     {% csrf_token %}
     <input type="text" name="card_title" autocomplete="off">
     <textarea name="card_description"></textarea>
-    <input type="number" min="1" max="50">
+    <input name="card_max_people_count" type="number" min="1" max="50">
+    <input name="card_images" type="file" multiple>
     <button type="submit" class="control_button">Сохранить</button>
 </form>
