Basic card styles and updated nav bar icons

--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -5,7 +5,7 @@
         <li class="nav_element">
             <a href="">
                 <div class="nav_button">
-                    <div class="material-icons-round">person</div>
+                    <div class="material-icons-round">person_outline</div>
                 </div>
             </a>
             <div class="nav_button_description">
@@ -25,17 +25,17 @@
         <li class="nav_element">
             <a href="">
                 <div class="nav_button">
-                    <div class="material-icons-round">chat</div>
+                    <div class="material-icons-round">mail_outline</div>
                 </div>
             </a>
             <div class="nav_button_description">
-                <p>Чаты</p>
+                <p>Сообщения</p>
             </div>
         </li>
         <li class="nav_element">
             <a href="">
                 <div class="nav_button">
-                    <div class="material-icons-round">notifications</div>
+                    <div class="material-icons-round">notifications_none</div>
                 </div>
             </a>
             <div class="nav_button_description">
@@ -45,7 +45,7 @@
         <li class="nav_element">
             <a href="">
                 <div class="nav_button">
-                    <div class="material-icons-round">archive</div>
+                    <div class="material-icons-round">view_carousel</div>
                 </div>
             </a>
             <div class="nav_button_description">
