--- a/ShumiProject/ShumiApp/static/css/base.css
+++ b/ShumiProject/ShumiApp/static/css/base.css
@@ -7,6 +7,11 @@
     padding: 0;
 }
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 body{
     font-family: 'Roboto Condensed', sans-serif;
 }
