--- a/ShumiProject/ShumiApp/templates/ShumiApp/main.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/main.html
@@ -1,6 +1,8 @@
 {% extends 'ShumiApp/base.html' %}
+{% load static %}
 
 {%block content%}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% include 'ShumiApp/navigation.html' %}
     <div class="card_wrapper">    
         {% for card in cards %}
@@ -21,6 +23,11 @@
                     {%endfor%}
                 </div>
                 {%endif%}
+            </div>
+            <div class="buttons_wrapper">
+                <button class="card_button no"><div class="material-icons-round">close</div></button>
+                <button class="card_button message"><div class="material-icons-round">mail</div></button>
+                <button class="card_button yes"><div class="material-icons-round">add</div></button>
             </div>
         </div>
         {% endfor %}
