--- a/ShumiProject/ShumiApp/templates/ShumiApp/card_form.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/card_form.html
@@ -1,8 +1,20 @@
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'css/card_form.css' %}">
+
 <form action="" method="POST" enctype="multipart/form-data" class="card_form">
     {% csrf_token %}
-    <input type="text" name="card_title" autocomplete="off">
-    <textarea name="card_description"></textarea>
-    <input name="card_max_people_count" type="number" min="1" max="50">
-    <input name="card_images" type="file" multiple>
-    <button type="submit" class="control_button">Сохранить</button>
+    <div class="card_title_and_card_max_people_count">
+        <textarea name="card_title" class="card_title" placeholder="Заголовок" required></textarea>
+        <div class="counter_label">
+            <p>Макс. людей</p>
+            <input name="card_max_people_count" type="number" min="1" max="50">
+        </div>
+    </div>
+    <textarea name="card_description" placeholder="Введите описание карточки..." class="card_description"required></textarea>
+    <label for="image-upload" class="card_images_input">Загрузить картинки</label>
+    <input name="card_images" type="file" id="image-upload" multiple>
+    <button type="submit" class="submit_button control_button">Сохранить</button>
 </form>
+
+<script src="{% static 'js/textarea.js' %}"></script>
