--- a/ShumiProject/ShumiApp/templates/ShumiApp/main.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/main.html
@@ -8,7 +8,17 @@
     {% for card in cards %}
     <div class="card_face">
         <div class="card_user_info">
-            <div class="card_user_image_wrapper"><img src="{{card.owner.avatar.url}}" class="card_user_image"></div>
+            <div class="card_user_image_wrapper">
+                {% if card.owner.avatar %}
+                    <img src="{{card.owner.avatar.url}}" class="card_user_image">
+                {% else %}   
+                    {% if user.socialaccount_set.all.0.get_avatar_url %}
+                        <img class="card_user_image" src='{{ user.socialaccount_set.all.0.get_avatar_url }}'>
+                    {% else %}
+                        <img class="card_user_image" src='https://iupac.org/wp-content/uploads/2018/05/default-avatar.png'>
+                    {% endif %}
+                {% endif %}
+            </div>
             <div class="card_user_name">{{card.owner.user.username}}</div>
         </div>
         <div class="card_content">
