--- a/ShumiProject/ShumiApp/templates/ShumiApp/main.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/main.html
@@ -7,6 +7,7 @@
 <div class="card_wrapper">
     {% for card in cards %}
     <div class="card_face">
+        <a href="profile/{{card.owner.id}}">
         <div class="card_user_info">
             <div class="card_user_image_wrapper">
                 {% if card.owner.avatar %}
@@ -21,6 +22,7 @@
             </div>
             <div class="card_user_name">{{card.owner.user.username}}</div>
         </div>
+        </a>
         <div class="card_content">
             <div class="card_text_content">
                 <div class="card_title_and_counter">
