--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -7,7 +7,7 @@
 <nav>
     <ul>
         <li class="nav_element">
-            <a href="">
+            <a href="profile/my">
                 <div class="nav_button">
                     <div class="material-icons-round">person_outline</div>
                 </div>
