--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -57,7 +57,7 @@
             </div>
         </li>
         <li class="nav_element logout_button">
-            <a href="accounts/logout">
+            <a href="{%url 'account_logout'%}">
                 <div class="nav_button">
                     <div class="material-icons-round">logout</div>
                 </div>
