--- a/ShumiProject/ShumiApp/static/css/base.css
+++ b/ShumiProject/ShumiApp/static/css/base.css
@@ -8,6 +8,10 @@
     color: rgb(51, 51, 51);
 }
 
+*:focus{
+    outline: none;
+}
+
 html {
     overflow-x: hidden;
     margin-right: calc(-1 * (100vw - 100%));
@@ -15,4 +19,19 @@ html {
 
 body{
     font-family: 'Roboto Condensed', sans-serif;
+}
+
+.form_button{
+    width: 100%;
+    cursor: pointer;
+    border: none;
+    padding: 5px;
+    margin: 5px 0px;
+    border-radius: 5px;
+    transition: 0.3s;
+    background: linear-gradient(45deg, rgba(51,51,51,0.2) 0%, rgba(51,51,51,0.1) 100%);
+}
+
+.form_button:hover{
+    background-color: rgb(230, 230, 230);
 }
