--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -23,7 +23,7 @@
                 </div>
             </a>
             <div class="nav_button_description">
-                <p>Поиск</p>
+                <p>Лента</p>
             </div>
         </li>
         <li class="nav_element">
