Mini cards styles

--- a/ShumiProject/ShumiApp/templates/ShumiApp/profile.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/profile.html
@@ -41,8 +41,8 @@
         {% else %}
             <h3 class="profile_cards_header">Карточки пользователя:</h3>
         {%endif%}
-        <div class="cards_wrapper"></div>
     </div>
+    {% include 'ShumiApp/mini_cards.html' %}
 </div>
 
 {%endblock%}
