--- a/ShumiProject/ShumiApp/static/css/profile.css
+++ b/ShumiProject/ShumiApp/static/css/profile.css
@@ -1,6 +1,6 @@
 .profile_wrapper{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 600px 1fr;
     padding: 30px 0px;
 }
 
@@ -58,7 +58,7 @@
 
 .profile_cards_wrapper{
     grid-column: 2;
-    padding-top: 60px;
+    padding: 60px 0px;
 }
 
 .profile_cards_header{
