Basic archive functionality and styles

--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -47,7 +47,7 @@
             </div>
         </li>
         <li class="nav_element">
-            <a href="">
+            <a href="{%url 'archive'%}">
                 <div class="nav_button">
                     <div class="material-icons-round">view_carousel</div>
                 </div>
