--- a/ShumiProject/ShumiApp/static/css/mini_cards.css
+++ b/ShumiProject/ShumiApp/static/css/mini_cards.css
@@ -2,6 +2,12 @@
     --card_height: auto;
 }
 
+.mini_cards_container{
+    padding: 30px 0px;
+    display: grid;
+    grid-template-columns: 1fr 600px 1fr;
+}
+
 .mini_cards_wrapper{
     grid-column: 2;
     columns: 2;
