--- a/ShumiProject/ShumiApp/static/css/card_form.css
+++ b/ShumiProject/ShumiApp/static/css/card_form.css
@@ -33,31 +33,32 @@ body{
     transition: 0.2s;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.3);
     padding: 15px;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     font-size: 24px;
     height: 100%;
 }
 
-.card_title_and_card_max_people_count{
-    height: min-content;
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr auto;
-    justify-content: center;
-    align-items: center;
-    padding: 25px 0px;
-}
-
 .card_title{
     height:34px;
     display: block;
     font-size: 26px;
-    margin: 0px 10px 0px 0px;
 }
 
 .counter_label{
+    width: 100%;
     font-size: 14px;
+    height: min-content;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    padding: 25px 0px;
+}
+
+.card_max_people_count{
+    justify-self: right;
 }
 
 textarea{
