--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -7,6 +7,9 @@
 <nav>
     <ul>
         <li class="nav_element">
+            <div class="logo">SHUMI</div>
+        </li>
+        <li class="nav_element">
             <a href="{% url 'profile_user' 'my' %}">
                 <div class="nav_button">
                     <div class="material-icons-round">person_outline</div>
