--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -6,8 +6,8 @@
 {% if request.user.is_authenticated %}
 <nav>
     <ul>
-        <li class="nav_element">
-            <div class="logo">SHUMI</div>
+        <li class="logo">
+            SHUMI
         </li>
         <li class="nav_element">
             <a href="{% url 'profile_user' 'my' %}">
