Avatars view fixed

--- a/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/navigation.html
@@ -39,7 +39,7 @@
                 <p>Сообщения</p>
             </div>
         </li>
-        <li class="nav_element">
+        <!-- <li class="nav_element">
             <a href="">
                 <div class="nav_button">
                     <div class="material-icons-round">notifications_none</div>
@@ -48,7 +48,7 @@
             <div class="nav_button_description">
                 <p>Уведомления</p>
             </div>
-        </li>
+        </li> -->
         <li class="nav_element">
             <a href="{%url 'archive'%}">
                 <div class="nav_button">
