--- a/ShumiProject/ShumiApp/templates/ShumiApp/mini_cards.html
+++ b/ShumiProject/ShumiApp/templates/ShumiApp/mini_cards.html
@@ -45,9 +45,7 @@
                                 {{card.current_people_count}}/{{card.max_people_count}}
                             </div>
                         </div>
-                        <div class="card_description">
-                            {{card.description}}
-                        </div>
+                        <div class="card_description">{{card.description}}</div>
                     </div>
                     <div class="card_images">
                         {%if card.images%}
